Fixed Card style by hiddening overflow

--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -11,6 +11,7 @@
   padding: 1px;
   background-color: var(--color-light);
   transition: var(--my-transition);
+  overflow: hidden;
 }
 
 .card:hover {
